tests/fixtures/invalid/pow_none_bytes_bool.py
# Cannot call pow() with None, Bytes, Bool
x = pow(None, b"hello", True)
